--- a/src/father-component-app/father-component-app.html
+++ b/src/father-component-app/father-component-app.html
@@ -1,4 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../../bower_components/children1-component/children1-component.html">
+<link rel="import" href="../../bower_components/children2-component/children1-component.html">
 
 <dom-module id="father-component-app">
   <template>
